Fix crash when deleting a SoftBody

Summary:
A SoftBody is a group and deleting it failed to update the properties of
items that are not connected to it but to any of its subitems.

BUG: 408574

Reviewers: yurchor

Reviewed By: yurchor

Subscribers: yurchor, kde-edu

Tags: #kde_edu

Differential Revision: https://phabricator.kde.org/D23311